--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -4,5 +4,8 @@
 @using UdemyCarBook.Dto.TestimonialDtos
 @using UdemyCarBook.Dto.ServiceDtos
 @using UdemyCarBook.Dto.CarDtos
+@using UdemyCarBook.Dto.FooterAddressDtos
+@using UdemyCarBook.Dto.ContactDtos
+@using UdemyCarBook.Dto.BannerDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
