--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using UdemyCarBook.Dto.ContactDtos
 @using UdemyCarBook.Dto.BannerDtos
 @using UdemyCarBook.Dto.BlogDtos
+@using UdemyCarBook.Dto.CarPricingDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
