--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailCloudTagByBlogComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailCloudTagByBlogComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<UdemyCarBook.Dto.TagCloudDtos.GetByBlogIdTagCloudDto>
+﻿@model List<GetByBlogIdTagCloudDto>
 <div class="tag-widget post-tag-container mb-5 mt-5">
     <div class="tagcloud">
         @foreach(var item in Model)
