--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -14,5 +14,7 @@
 @using UdemyCarBook.Dto.CommentDtos
 @using UdemyCarBook.Dto.TagCloudDtos
 @using UdemyCarBook.Dto.AuthorDtos
+@using UdemyCarBook.Dto.FeatureDtos
+@using UdemyCarBook.Dto.BrandDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
