147. Referans İşlemlerinin Tamamlanması

--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,6 +4,15 @@
 @using UdemyCarBook.Dto.BannerDtos
 @using UdemyCarBook.Dto.AuthorDtos
 @using UdemyCarBook.Dto.CategoryDtos
+@using UdemyCarBook.Dto.BlogDtos
+@using UdemyCarBook.Dto.CommentDtos
+@using UdemyCarBook.Dto.PricingDtos
+@using UdemyCarBook.Dto.ContactDtos
+@using UdemyCarBook.Dto.FooterAddressDtos
+@using UdemyCarBook.Dto.LocationDtos
+@using UdemyCarBook.Dto.ServiceDtos
+@using UdemyCarBook.Dto.SocialMediaDtos
+@using UdemyCarBook.Dto.TestimonialDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
