--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -16,5 +16,6 @@
 @using UdemyCarBook.Dto.AuthorDtos
 @using UdemyCarBook.Dto.FeatureDtos
 @using UdemyCarBook.Dto.BrandDtos
+@using UdemyCarBook.Dto.RentACarDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
