--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -17,5 +17,6 @@
 @using UdemyCarBook.Dto.FeatureDtos
 @using UdemyCarBook.Dto.BrandDtos
 @using UdemyCarBook.Dto.RentACarDtos
+@using UdemyCarBook.Dto.ReservationDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
