219. Araç Fiyat Listesi

--- a/Frontends/UdemyCarBook.WebUI/Views/Reservation/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Reservation/Index.cshtml
@@ -1,46 +1,88 @@
 ﻿@model CreateReservationDto
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Rezervasyon";
     Layout = "~/Views/UILayout/Index.cshtml";
 }
 
-<div class="col-md-12 block-9 mb-md-5">
-   
-    <form class="bg-light p-5 contact-form" method="post">
-        <h3 class="alert alert-success">Araç Rezervasyon Formu</h3>
-        <br />
-            <input type="hidden" asp-for="CarID" value="@ViewBag.v3" class="form-control" placeholder="Almak İstediğiniz Araba">
-        <div class="form-group">
-            <input type="text" asp-for="Name" class="form-control" placeholder="Adınız">
-        </div>
-        <div class="form-group">
-            <input type="text" asp-for="Surname" class="form-control" placeholder="Soyadınız">
-        </div>
-        <div class="form-group">
-            <input type="text" asp-for="Email" class="form-control" placeholder="Mail Adresiniz">
-        </div>
-        <div class="form-group">
-            <input type="text" asp-for="Phone" class="form-control" placeholder="Telefon Numaranız">
-        </div>
-        <div class="form-group">
-            @Html.DropDownListFor(x=>x.DropOffLocationID,(List<SelectListItem>)ViewBag.v,new{@class="form-control"})
-        </div>
-        <div class="form-group">
-            @Html.DropDownListFor(x=>x.PickUpLocationID,(List<SelectListItem>)ViewBag.v,new{@class="form-control"})
-        </div>
-        <div class="form-group">
-            <input type="text" asp-for="Age" class="form-control" placeholder="Yaşınız">
-        </div>
-        <div class="form-group">
-            <input type="text" asp-for="DriverLicenseYear" class="form-control" placeholder="Ehliyet Yılınız">
-        </div>
-        <div class="form-group">
-            <textarea  asp-for="Description" id="" cols="30" rows="7" class="form-control" placeholder="Varsa Eklemek İstedikleriniz"></textarea>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Rezervasyonu Tamamla" class="btn btn-primary py-3 px-5">
-        </div>
-    </form>
+<style>
+    .form-label {
+        font-weight: 600;
+    }
 
+    input:focus, select:focus, textarea:focus {
+        border-color: #0d6efd;
+        box-shadow: 0 0 0 0.2rem rgba(13,110,253,.25);
+    }
+
+    select.form-select {
+        height: 47px; 
+        padding-top: 0.375rem;
+        padding-bottom: 0.375rem;
+    }
+</style>
+
+
+<div class="container py-5">
+    <div class="col-md-10 mx-auto">
+        <div class="bg-white shadow rounded p-5">
+            <h2 class="mb-4 text-center text-primary">Araç Rezervasyon Formu</h2>
+            <form method="post">
+                <input type="hidden" asp-for="CarID" value="@ViewBag.v3" />
+
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        <label asp-for="Name" class="form-label">Adınız</label>
+                        <input asp-for="Name" class="form-control" placeholder="Adınızı girin" />
+                    </div>
+                    <div class="col-md-6">
+                        <label asp-for="Surname" class="form-label">Soyadınız</label>
+                        <input asp-for="Surname" class="form-control" placeholder="Soyadınızı girin" />
+                    </div>
+                    <div class="col-md-6">
+                        <label asp-for="Email" class="form-label">Mail Adresiniz</label>
+                        <input asp-for="Email" class="form-control" type="email" placeholder="ornek@mail.com" />
+                    </div>
+                    <div class="col-md-6">
+                        <label asp-for="Phone" class="form-label">Telefon Numaranız</label>
+                        <input asp-for="Phone" class="form-control" type="tel" placeholder="05xx xxx xx xx" />
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Alınacak Lokasyon</label>
+                        @Html.DropDownListFor(x => x.DropOffLocationID,
+                                 (List<SelectListItem>)ViewBag.v,
+                                 "Seçiniz",
+                                 new { @class = "form-control w-100" })
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Bırakılacak Lokasyon</label>
+                        @Html.DropDownListFor(x => x.PickUpLocationID,
+                                 (List<SelectListItem>)ViewBag.v,
+                                 "Seçiniz",
+                                 new { @class = "form-control w-100" })
+                    </div>
+
+
+                    <div class="col-md-6">
+                        <label asp-for="Age" class="form-label">Yaşınız</label>
+                        <input asp-for="Age" class="form-control" type="number" min="18" max="100" placeholder="Örn: 30" />
+                    </div>
+                    <div class="col-md-6">
+                        <label asp-for="DriverLicenseYear" class="form-label">Ehliyet Alım Yılınız</label>
+                        <input asp-for="DriverLicenseYear" class="form-control" type="number" placeholder="Örn: 2015" />
+                    </div>
+                    <div class="col-12">
+                        <label asp-for="Description" class="form-label">Eklemek İstedikleriniz</label>
+                        <textarea asp-for="Description" class="form-control" rows="4" placeholder="Varsa notunuzu buraya yazabilirsiniz"></textarea>
+                    </div>
+                </div>
+
+                <div class="text-center mt-4">
+                    <button type="submit" class="btn btn-success btn-lg px-5">Rezervasyonu Tamamla</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
