--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_HeadUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_HeadUILayoutComponentPartial/Default.cshtml
@@ -23,4 +23,20 @@
     <link rel="stylesheet" href="~/carbook-master/css/flaticon.css">
     <link rel="stylesheet" href="~/carbook-master/css/icomoon.css">
     <link rel="stylesheet" href="~/carbook-master/css/style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Eğer TempData SuccessMessage varsa
+            if ('@TempData["SuccessMessage"]' !== '') {
+                var successModal = new bootstrap.Modal(document.getElementById('successModal'));
+                successModal.show();
+            }
+            // Eğer TempData ErrorMessage varsa
+            if ('@TempData["ErrorMessage"]' !== '') {
+                var errorModal = new bootstrap.Modal(document.getElementById('errorModal'));
+                errorModal.show();
+            }
+        });
+    </script>
 </head>
