--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_DefaultStatisticsComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_DefaultStatisticsComponentPartial/Default.cshtml
@@ -1,4 +1,7 @@
-﻿<section class="ftco-counter ftco-section img bg-light" id="section-counter">
+﻿
+
+
+<section class="ftco-counter ftco-section img bg-light" id="section-counter">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
