251. Arabaya Özellik Atama İşlemlerinin Tamamlanması

--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,6 +13,8 @@
 @using UdemyCarBook.Dto.ServiceDtos
 @using UdemyCarBook.Dto.SocialMediaDtos
 @using UdemyCarBook.Dto.TestimonialDtos
+@using UdemyCarBook.Dto.FeatureDtos
+@using UdemyCarBook.Dto.CarFeatureDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
