--- a/Frontends/UdemyCarBook.WebUI/Views/CarPricing/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/CarPricing/Index.cshtml
@@ -26,7 +26,7 @@
 								<tr class="">
 									<td class="car-image"><div class="img" style="background-image:url(@item.CoverImageUrl);"></div></td>
 									<td class="product-name">
-										<h3>@item.model</h3>
+										<h3>@item.Model</h3>
 										<p class="mb-0 rated">
 											<span>Puanı:</span>
 											<span class="ion-ios-star"></span>
@@ -41,7 +41,7 @@
 										<p class="btn-custom"><a href="#">Bu Aracı Kiralayın</a></p>
 										<div class="price-rate">
 											<h3>
-												<span class="num"><small class="currency">₺ </small> @item.dailyAmount</span>
+												<span class="num"><small class="currency">₺ </small> @item.DailyAmount</span>
 												<span class="per">Günlük Fiyat</span>
 											</h3>
 										</div>
@@ -51,7 +51,7 @@
 										<p class="btn-custom"><a href="#">Bu Aracı Kiralayın</a></p>
 										<div class="price-rate">
 											<h3>
-												<span class="num"><small class="currency">₺</small> @item.weeklyAmount</span>
+												<span class="num"><small class="currency">₺</small> @item.WeeklyAmount</span>
 												<span class="per">Haftalık Fiyat</span>
 											</h3>
 										</div>
@@ -61,7 +61,7 @@
 										<p class="btn-custom"><a href="#">Bu Aracı Kiralayın</a></p>
 										<div class="price-rate">
 											<h3>
-												<span class="num"><small class="currency">₺</small> @item.monthlyAmount</span>
+												<span class="num"><small class="currency">₺</small> @item.MonthlyAmount</span>
 												<span class="per">Aylık Fiyat</span>
 											</h3>
 										</div>
