--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -18,6 +18,9 @@
 @using UdemyCarBook.Dto.BrandDtos
 @using UdemyCarBook.Dto.RentACarDtos
 @using UdemyCarBook.Dto.ReservationDtos
+@using UdemyCarBook.Dto.CarDescriptionDtos
+@using UdemyCarBook.Dto.CarFeatureDtos
+@using UdemyCarBook.Dto.ReviewDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
